24.12.24 enhance the logic for the propagation made by the update method